--- a/styles/style.css
+++ b/styles/style.css
@@ -1,243 +1,11 @@
-@font-face {
-    font-family: "Montserrat";
-    src: url("./assets/fonts/Montserrat-Redular.woff2") format("woff2");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Montserrat";
-    src: url("./assets/fonts/Montserrat-Medium.woff2") format("woff2");
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-@font-face {
-    font-family: "Montserrat";
-    src: url("./assets/fonts/Montserrat-Bold.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-
-/**
-  Нормализация блочной модели
- */
-*,
-::before,
-::after {
-    box-sizing: border-box;
-}
-
-/**
-  Убираем внутренние отступы слева тегам списков,
-  у которых есть атрибут class
- */
-:where(ul, ol):where([class]) {
-    padding-left: 0;
-}
-
-/**
-  Убираем внешние отступы body и двум другим тегам,
-  у которых есть атрибут class
- */
-body,
-:where(blockquote, figure):where([class]) {
-    margin: 0;
-}
-
-/**
-  Убираем внешние отступы вертикали нужным тегам,
-  у которых есть атрибут class
- */
-:where(
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  ul,
-  ol,
-  dl
-):where([class]) {
-    margin-block: 0;
-}
-
-:where(dd[class]) {
-    margin-left: 0;
-}
-
-:where(fieldset[class]) {
-    margin-left: 0;
-    padding: 0;
-    border: none;
-}
-
-/**
-  Убираем стандартный маркер маркированному списку,
-  у которого есть атрибут class
- */
-:where(ul[class]) {
-    list-style: none;
-}
-
-:where(address[class]) {
-    font-style: normal;
-}
-
-/**
-  Обнуляем вертикальные внешние отступы параграфа,
-  объявляем локальную переменную для внешнего отступа вниз,
-  чтобы избежать взаимодействие с более сложным селектором
- */
-p {
-    --paragraphMarginBottom: 24px;
-
-    margin-block: 0;
-}
-
-/**
-  Внешний отступ вниз для параграфа без атрибута class,
-  который расположен не последним среди своих соседних элементов
- */
-p:where(:not([class]):not(:last-child)) {
-    margin-bottom: var(--paragraphMarginBottom);
-}
-
-
-/**
-  Упрощаем работу с изображениями и видео
- */
-img,
-video {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-/**
-  Наследуем свойства шрифт для полей ввода
- */
-input,
-textarea,
-select,
-button {
-    font: inherit;
-}
-
-html {
-    /**
-      Пригодится в большинстве ситуаций
-      (когда, например, нужно будет "прижать" футер к низу сайта)
-     */
-    height: 100%;
-    /**
-      Убираем скачок интерфейса по горизонтали
-      при появлении / исчезновении скроллбара
-     */
-    scrollbar-gutter: stable;
-}
-
-/**
-  Плавный скролл
- */
-html,
-:has(:target) {
-    scroll-behavior: smooth;
-}
-
-body {
-    /**
-      Пригодится в большинстве ситуаций
-      (когда, например, нужно будет "прижать" футер к низу сайта)
-     */
-    min-height: 100%;
-    /**
-      Унифицированный интерлиньяж
-     */
-    line-height: 1.5;
-}
-
-/**
-  Нормализация высоты элемента ссылки при его инспектировании в DevTools
- */
-a:where([class]) {
-    display: inline-flex;
-}
-
-/**
-  Курсор-рука при наведении на элемент
- */
-button,
-label {
-    cursor: pointer;
-}
-
-/**
-  Приводим к единому цвету svg-элементы
-  (за исключением тех, у которых уже указан
-  атрибут fill со значением 'none' или начинается с 'url')
- */
-:where([fill]:not(
-  [fill="none"],
-  [fill^="url"]
-)) {
-    fill: currentColor;
-}
-
-/**
-  Приводим к единому цвету svg-элементы
-  (за исключением тех, у которых уже указан
-  атрибут stroke со значением 'none')
- */
-:where([stroke]:not(
-  [stroke="none"],
-  [stroke^="url"]
-)) {
-    stroke: currentColor;
-}
-
-/**
-  Чиним баг задержки смены цвета при взаимодействии с svg-элементами
- */
-svg * {
-    transition-property: fill, stroke;
-}
-
-/**
-  Приведение рамок таблиц в классический 'collapse' вид
- */
-:where(table) {
-    border-collapse: collapse;
-    border-color: currentColor;
-}
-
-/**
-  Удаляем все анимации и переходы для людей,
-  которые предпочитают их не использовать
- */
-@media (prefers-reduced-motion: reduce) {
-    *,
-    ::before,
-    ::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
-
 :root {
     --color-dark: #000000;
     --color-light: #FFFFFF;
+    --color-night: #0C0C0C;
     --color-dark-gray: #1A1A1A;
     --color-accent: #0A51CB;
     --color-cobalt-blue: #0740A1;
+    --color-platinum: #E3E3E3;
 
     --border-radius: 36px;
     --border: 2px solid var(--color-light);
@@ -250,7 +18,8 @@ svg * {
     --container-width: 1480px;
     --container-padding-x: 30px;
 
-    --box-shadow: 10px 20px 45px 1px rgba(0, 0, 0, 0.1);
+    --box-shadow-card: 0 8px 15px rgba(0, 0, 0, 0.15);
+    --box-shadow-block: 2px 4px 11px 1px rgba(0, 0, 0, 0.25), 2px 4px 11px 1px rgba(0, 0, 0, 0.25);
 
     --transition-duration: 0.2s;
 }
@@ -258,7 +27,7 @@ svg * {
 body {
     font-family: var(--font-family-base);
     background-color: var(--color-light);
-    font-size: clamp(16px, 0.94vw, 18px);
+    font-size: 18px;
     line-height: 1.5;
     letter-spacing: 0.07em;
 }
@@ -296,6 +65,7 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--color-light);
     border-radius: var(--border-radius);
     border: var(--border);
+    white-space: nowrap;
 }
 
 .button:hover {
@@ -342,6 +112,7 @@ h3 {
     align-items: center;
     justify-content: center;
     text-align: center;
+    font-weight: 700;
     row-gap: 10px;
     padding-block: 15px;
     min-height: var(--link-min-heigt);
@@ -544,6 +315,12 @@ h3 {
     margin-bottom: 40px;
 }
 
+.about-approach__card-text,
+.about-approach__description {
+    color: #404040;
+    font-weight: 400;
+}
+
 .about-approach__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -554,7 +331,7 @@ h3 {
     display: flex;
     flex-direction: column;
     padding: 64px 39px;
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow-card);
 }
 
 .about-approach__header {
@@ -569,6 +346,20 @@ h3 {
 
 .about-approach__card-title {
     font-size: 18px;
+    position: relative;
+    width: 65%;
+}
+
+.about-approach__card-title::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: -30px;
+    transform: translateY(-50%);
+    width: 2px;
+    height: 100%;
+    background-color: var(--color-platinum);
 }
 
 @media (max-width: 1280px) {
@@ -583,5 +374,399 @@ h3 {
     .about-approach__cards {
         display: flex;
         flex-direction: column;
+    }
+}
+
+.invest {
+    min-height: 748px;
+    display: flex;
+    background-color: var(--color-dark-gray);
+    color: var(--color-light)
+}
+
+.invest__image-wrapper {
+    min-width: 300px;
+    max-width: 50%;
+    overflow: hidden;
+}
+
+.invest__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.invest__content {
+    width: 100%;
+    padding: 90px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 141px;
+}
+
+
+.invest__intro {
+    max-width: 372px;
+}
+
+.invest__title {
+    margin-bottom: 135px;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -62px;
+        left: 0;
+        width: 58px;
+        height: 3px;
+        background-color: #fff;
+    }
+}
+
+.steps__list {
+    position: relative;
+    max-width: 591px;
+    display: flex;
+    flex-direction: column;
+    gap: 47px;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: -70px;
+        left: 42px;
+        transform: translateX(-50%);
+        width: 2px;
+        height: calc(100% + 140px);
+        background-image: url('../assets/images/invest/dotted-line.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: 0;
+    }
+}
+
+.steps__item {
+    display: flex;
+    align-items: center;
+    gap: 38px;
+}
+
+.steps__number {
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+    background-color: var(--color-light);
+    color: var(--color-accent);
+    font-weight: 700;
+    font-size: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    z-index: 1;
+}
+
+.steps__item:nth-child(even) .steps__number {
+    background-color: var(--color-accent);
+    color: white;
+}
+
+
+.steps__title {
+    font-size: 18px;
+    margin-bottom: 12px;
+}
+
+.steps__text {
+    font-weight: 400;
+}
+
+@media (max-width: 1480px) {
+    .invest__content {
+        flex-direction: column;
+    }
+
+    .invest__intro {
+    }
+}
+
+@media (max-width: 1024px) {
+    .invest__image-wrapper {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .steps__item {
+        gap: 18px;
+    }
+
+}
+
+.faq {
+    padding-block: 119px;
+}
+
+.faq__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.faq__body {
+    display: grid;
+    grid-template-columns: repeat(2, 53% 47%);
+    gap: 17px;
+}
+
+.faq__title {
+    text-align: center;
+    margin-bottom: 115px;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 65px;
+        height: 3px;
+        background-color: var(--color-accent);
+    }
+}
+
+.faq__question {
+    display: flex;
+    align-items: center;
+    padding: 35px 42px;
+    box-shadow: var(--box-shadow-card);
+}
+
+.faq__question-text {
+    margin-inline: 41px;
+}
+
+.faq__question-button {
+    margin-left: auto;
+    color: var(--color-accent)
+}
+
+.faq__list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.faq__info {
+    background-color: var(--color-accent);
+    color: var(--color-light);
+    padding: 64px;
+    box-shadow: var(--box-shadow-block);
+}
+
+@media (max-width: 1024px) {
+    .faq__body {
+        grid-template-columns: 1fr;
+    }
+}
+
+.stats {
+    background-image: url("../assets/images/stats/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 728px;
+    color: var(--color-light);
+}
+
+.stats__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 102px;
+}
+
+.stats__title {
+    padding-top: 110px;
+    text-align: center;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 65px;
+        height: 3px;
+        background-color: var(--color-light);
+    }
+}
+
+.stats__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.stats__item {
+    display: flex;
+    flex-direction: column;
+    min-width: 306px;
+    gap: 30px;
+}
+
+.stats__value {
+    font-size: 64px;
+    font-weight: 700;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--color-light);
+    }
+}
+
+.stats__label {
+    font-weight: 400;
+}
+
+.stats__actions {
+    display: flex;
+    gap: 25px;
+    margin-bottom: 142px;
+}
+
+@media (max-width: 1480px) {
+    .stats__list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .stats__list {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+
+    .stats__item {
+        min-width: 270px;
+    }
+
+    .stats__actions {
+        flex-direction: column;
+    }
+}
+
+.footer {
+    background-color: var(--color-night);
+    color: var(--color-light);
+    padding-top: 111px;
+    padding-bottom: 218px;
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: minmax(300px, 404px) minmax(405px, 505px) minmax(223px, 323px);
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.footer__navigation-title {
+    position: relative;
+    margin-bottom: 40px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -20px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: var(--color-light);
+    }
+}
+
+.footer__navigation-body {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.footer__column-title {
+    position: relative;
+    margin-bottom: 40px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -20px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: var(--color-light);
+    }
+}
+
+.footer__phone {
+    margin-bottom: 40px;
+}
+
+.footer__list {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    gap: 10px;
+}
+
+.footer__link {
+    transition: var(--transition-duration);
+
+    &:hover {
+        color: var(--color-accent)
+    }
+}
+
+.footer__link-strong {
+    font-weight: 700;
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        padding-top: 55px;
+        padding-bottom: 109px;
+    }
+
+    .footer__container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        justify-content: space-between;
+    }
+
+    .footer__navigation-body {
+        display: flex;
+        justify-content: start;
+        gap: 50px;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer__navigation-body {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
