--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-flex;
     height: var(--button-height);
     align-items: center;
+    justify-content: center;
     padding-inline: 35px;
     background-color: transparent;
     color: var(--color-light);
@@ -89,8 +90,12 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--color-light);
 }
 
+.text-strong {
+    font-weight: 700;
+}
+
 h1 {
-    font-size: clamp(36px, 2.71vw, 52px);
+    font-size: clamp(28px, 2.71vw, 52px);
 }
 
 h2 {
@@ -98,7 +103,7 @@ h2 {
 }
 
 h3 {
-    font-size: 36px;
+    font-size: clamp(22px, 1.88vw, 36px);
 }
 
 .header {
@@ -127,6 +132,7 @@ h3 {
 
 .aside__text {
     font-size: clamp(18px, 1.88vw, 38px);
+    margin-bottom: 30px;
 }
 
 .header-actions {
@@ -184,9 +190,7 @@ h3 {
 }
 
 .hero__body {
-    padding-left: 111px;
-    padding-top: 123px;
-    margin-right: 30px;
+    padding: 123px 111px;
     max-width: 878px;
     color: var(--color-light)
 }
@@ -222,6 +226,10 @@ h3 {
         column-gap: 30px;
         width: 100%;
     }
+
+    .hero__body {
+        padding: 60px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -234,11 +242,6 @@ h3 {
         min-height: 50px;
     }
 
-    .hero__body {
-        padding-left: 30px;
-        padding-top: 30px;
-    }
-
     .hero__title {
         margin-bottom: 22px;
     }
@@ -246,6 +249,10 @@ h3 {
     .hero__description {
         margin-bottom: 27px;
         font-size: 18px;
+    }
+
+    .hero__body {
+        padding: 30px;
     }
 }
 
@@ -317,7 +324,7 @@ h3 {
 
 .about-approach__card-text,
 .about-approach__description {
-    color: #404040;
+    color: var(--color-dark-gray);
     font-weight: 400;
 }
 
@@ -340,26 +347,28 @@ h3 {
     margin-bottom: 42px;
 }
 
-.about-approach__card-icon {
-
-}
-
 .about-approach__card-title {
+    display: flex;
+    align-items: center;
     font-size: 18px;
     position: relative;
     width: 65%;
 }
 
-.about-approach__card-title::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: -30px;
-    transform: translateY(-50%);
-    width: 2px;
-    height: 100%;
-    background-color: var(--color-platinum);
+.about-approach__card-icon {
+    position: relative;
+
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: -30px;
+        transform: translateY(-50%);
+        width: 2px;
+        height: 100%;
+        background-color: var(--color-platinum);
+    }
 }
 
 @media (max-width: 1280px) {
@@ -374,6 +383,12 @@ h3 {
     .about-approach__cards {
         display: flex;
         flex-direction: column;
+    }
+}
+
+@media (max-width: 768px) {
+    .about-approach__card-icon {
+        display: none;
     }
 }
 
@@ -491,7 +506,26 @@ h3 {
     }
 
     .invest__intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
+
+    .invest__title {
+        text-align: center;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -62px;
+            left: 50%;
+            transform: translateX(-50%);;
+            width: 58px;
+            height: 3px;
+            background-color: #fff;
+        }
+    }
+
 }
 
 @media (max-width: 1024px) {
@@ -542,12 +576,11 @@ h3 {
 .faq__question {
     display: flex;
     align-items: center;
+    gap: 41px;
+    height: 100%;
+    min-height: 130px;
     padding: 35px 42px;
     box-shadow: var(--box-shadow-card);
-}
-
-.faq__question-text {
-    margin-inline: 41px;
 }
 
 .faq__question-button {
@@ -556,21 +589,57 @@ h3 {
 }
 
 .faq__list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-auto-rows: 1fr;
+    justify-content: stretch;
+    height: 100%;
     gap: 15px;
 }
 
 .faq__info {
     background-color: var(--color-accent);
     color: var(--color-light);
-    padding: 64px;
+    padding: 60px;
     box-shadow: var(--box-shadow-block);
+}
+
+.faq__info-title {
+    position: relative;
+    margin-bottom: 80px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -42px;
+        left: 0;
+        width: 58px;
+        height: 3px;
+        background-color: #fff;
+    }
 }
 
 @media (max-width: 1024px) {
     .faq__body {
         grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .faq__title {
+        margin-bottom: 50px;
+    }
+
+    .faq__question {
+        padding: 17px 21px;
+        gap: 10px;
+    }
+
+    .faq__question-icon {
+        display: none;
+    }
+
+    .faq__info {
+        padding: 30px;
     }
 }
 
@@ -739,7 +808,7 @@ h3 {
     }
 }
 
-.footer__link-strong {
+.footer__link--strong {
     font-weight: 700;
 }
 
